--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@electron-forge/cli": "^7.8.3",
     "@electron-forge/maker-deb": "^7.8.3",
+    "@electron-forge/maker-dmg": "^7.8.3",
     "@electron-forge/maker-rpm": "^7.8.3",
     "@electron-forge/maker-squirrel": "^7.8.3",
     "@electron-forge/maker-zip": "^7.8.3",
@@ -31,7 +32,7 @@
     "@electron-forge/plugin-vite": "^7.8.3",
     "@electron-forge/publisher-github": "^7.8.3",
     "@electron/fuses": "^1.8.0",
-    "@types/better-sqlite3": "^7.6.13",
+    "@electron/rebuild": "^4.0.1",
     "@types/lodash": "^4.17.19",
     "@types/markdown-it": "^14.1.2",
     "@types/react": "^18.0.28",
@@ -53,10 +54,10 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.8.2",
     "axios": "^1.10.0",
-    "better-sqlite3": "^12.2.0",
     "dom-to-image": "^2.6.0",
     "echarts": "^5.6.0",
     "electron-log": "^5.4.2",
+    "electron-store": "^10.1.0",
     "electron-updater": "^5.3.0",
     "highlight.js": "^11.11.1",
     "html2canvas": "^1.4.1",
