--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@vitejs/plugin-react": "^5.0.0",
     "@vitejs/plugin-react-swc": "^3.11.0",
     "cross-env": "^10.0.0",
+    "dotenv": "^17.2.1",
     "electron": "37.2.6",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.32.0",
