--- a/package.json
+++ b/package.json
@@ -19,6 +19,14 @@
     "name": "kohan",
     "email": "lizouzt@gmail.com"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/lizouzt/Moko.git"
+  },
+  "bugs": {
+    "url": "https://github.com/lizouzt/Moko/issues"
+  },
+  "homepage": "https://github.com/lizouzt/Moko#readme",
   "license": "MIT",
   "devDependencies": {
     "@electron-forge/cli": "^7.8.3",
@@ -32,7 +40,6 @@
     "@electron-forge/plugin-vite": "^7.8.3",
     "@electron-forge/publisher-github": "^7.8.3",
     "@electron/fuses": "^1.8.0",
-    "@electron/rebuild": "^4.0.1",
     "@types/lodash": "^4.17.19",
     "@types/markdown-it": "^14.1.2",
     "@types/react": "^18.0.28",
@@ -59,7 +66,6 @@
     "echarts": "^5.6.0",
     "electron-log": "^5.4.2",
     "electron-store": "^10.1.0",
-    "electron-updater": "^5.3.0",
     "highlight.js": "^11.11.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
@@ -74,6 +80,7 @@
     "react-router-dom": "^7.6.2",
     "styled-components": "^6.1.19",
     "tdesign-react": "^1.0.3",
-    "tvision-color": "^1.6.0"
+    "tvision-color": "^1.6.0",
+    "update-electron-app": "^3.1.1"
   }
 }
