feat: Add i18next

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "vite --config vite.renderer.config.ts --mode development",
     "build": "vite --config vite.renderer.config.ts --mode production",
     "preview": "vite --config vite.renderer.config.ts preview",
+    "scan": "i18next-scanner --config i18next-scanner.config.js",
     "start": "electron-forge start",
     "package": "electron-forge package",
     "make": "electron-forge make",
@@ -40,6 +41,7 @@
     "@electron-forge/plugin-vite": "^7.8.3",
     "@electron-forge/publisher-github": "^7.8.3",
     "@electron/fuses": "^1.8.0",
+    "@svgr/plugin-svgo": "^8.1.0",
     "@types/lodash": "^4.17.19",
     "@types/markdown-it": "^14.1.2",
     "@types/react": "^18.0.28",
@@ -53,8 +55,9 @@
     "electron": "37.2.6",
     "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.32.0",
+    "i18next-scanner": "^4.6.0",
     "less": "*",
-    "typescript": "~4.5.4",
+    "typescript": "^5.9.2",
     "vite": "^7.1.1",
     "vite-plugin-mock": "^3.0.2",
     "vite-plugin-svgr": "^4.3.0"
@@ -68,6 +71,8 @@
     "electron-store": "^10.1.0",
     "highlight.js": "^11.11.1",
     "html2canvas": "^1.4.1",
+    "i18next": "^25.5.0",
+    "i18next-browser-languagedetector": "^8.2.0",
     "jspdf": "^3.0.1",
     "lodash": "^4.17.21",
     "markdown-it": "^14.1.0",
@@ -76,6 +81,7 @@
     "monaco-editor": "^0.52.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-i18next": "^15.7.3",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.2",
     "styled-components": "^6.1.19",
