--- a/package.json
+++ b/package.json
@@ -30,9 +30,9 @@
   "homepage": "https://github.com/lizouzt/Moko#readme",
   "license": "MIT",
   "devDependencies": {
-    "@electron-forge/cli": "^7.8.3",
-    "@electron-forge/maker-deb": "^7.8.3",
-    "@electron-forge/maker-dmg": "^7.8.3",
+    "@electron-forge/cli": "^7.10.2",
+    "@electron-forge/maker-deb": "^7.10.2",
+    "@electron-forge/maker-dmg": "^7.10.2",
     "@electron-forge/maker-rpm": "^7.8.3",
     "@electron-forge/maker-squirrel": "^7.8.3",
     "@electron-forge/maker-zip": "^7.8.3",
@@ -50,6 +50,7 @@
     "@typescript-eslint/parser": "^5.62.0",
     "@vitejs/plugin-react": "^5.0.0",
     "@vitejs/plugin-react-swc": "^3.11.0",
+    "appdmg": "^0.6.6",
     "cross-env": "^10.0.0",
     "dotenv": "^17.2.1",
     "electron": "37.2.6",
